--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    
+    <div id="buttons">
+    <button id="newBtn">New</button>
+    <button id="clearBtn">Clear</button>
+</div>
+    <div id="grid">
+
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
